<resources>
    <string name="app_name">SchoolApp</string>
    <string name="title_home">Classes</string>
    <string name="title_dashboard">Étudiants</string>
    <string name="title_notifications">Page</string>
    <string name="add_word">Add Class Room</string>
    <string name="add_student">Add Student</string>
    <string name="title_activity_add_classe">AddCLasse</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_word">Classe...</string>
    <string name="hint_word_grade">Grade...</string>
    <string name="hint_word_date">Date...</string>
    <string name="button_save">Enregistrer</string>
    <string name="empty_not_saved">Classe not saved because it is empty.</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prenom</string>
    <string name="hint_tel">Tel</string>
    <string name="hint_email">Email</string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_dateNaissance">Date de naissance</string>
    <string name="title_activity_classe_page">ClassePage</string>
    <string name="tab_text_1">Class</string>
    <string name="tab_text_2">Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nom :</string>
    <string name="grade">Grade :</string>
    <string name="n_students">Nb d\'étudiants:</string>
    <string name="coef">Coef</string>
    <string name="course">Matiers</string>
    <string name="attendence">Attendence</string>
    <string name="classe">Classe</string>

    <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
        <item name="android:windowFullscreen">true</item>
    </style>

</resources>