<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/formsList">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_nom"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_prenom"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/dateNaissance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_dateNaissance"
                android:inputType="date"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_tel"
                android:inputType="phone"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                />
            <EditText
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_adresse"
                android:inputType="text"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel"
        android:gravity="center"/>



</LinearLayout>